--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Second Assignment</string>
+    <string name="add"> Add </string>
+    <string name="save">Save</string>
+    <string name="delete">Delete</string>
 </resources>
